// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <list>
    <section>
      <View
        accessibilityTraits="header"
        style={
          Array [
            Object {
              "backgroundColor": "#f5f5f5",
              "flex": 1,
              "justifyContent": "center",
              "paddingLeft": 16,
              "paddingRight": 8,
              "paddingVertical": 4,
            },
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "#f5f5f5",
                "color": "#73818C",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Courses
        </Text>
      </View>
      <item>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.1-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Learn React Native
            </Text>
          </View>
        </View>
      </item>
      <item>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.2-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Learn React Native
            </Text>
          </View>
        </View>
      </item>
    </section>
  </list>
</RCTSafeAreaView>
`;

exports[`renders correctly as student 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <list>
    <section>
      <View
        accessibilityTraits="header"
        style={
          Array [
            Object {
              "backgroundColor": "#f5f5f5",
              "flex": 1,
              "justifyContent": "center",
              "paddingLeft": 16,
              "paddingRight": 8,
              "paddingVertical": 4,
            },
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "#f5f5f5",
                "color": "#73818C",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Courses
        </Text>
      </View>
      <item>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.1-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Learn React Native
            </Text>
          </View>
        </View>
      </item>
      <item>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.2-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Learn React Native
            </Text>
          </View>
        </View>
      </item>
    </section>
    <section>
      <View
        accessibilityTraits="header"
        style={
          Array [
            Object {
              "backgroundColor": "#f5f5f5",
              "flex": 1,
              "justifyContent": "center",
              "paddingLeft": 16,
              "paddingRight": 8,
              "paddingVertical": 4,
            },
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "#f5f5f5",
                "color": "#73818C",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Groups
        </Text>
      </View>
      <item>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.1-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Red Squadron
            </Text>
          </View>
        </View>
      </item>
      <item>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.2-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Red Squadron
            </Text>
          </View>
        </View>
      </item>
    </section>
  </list>
</RCTSafeAreaView>
`;

exports[`updates when courses prop changes 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <list>
    <section>
      <View
        accessibilityTraits="header"
        style={
          Array [
            Object {
              "backgroundColor": "#f5f5f5",
              "flex": 1,
              "justifyContent": "center",
              "paddingLeft": 16,
              "paddingRight": 8,
              "paddingVertical": 4,
            },
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "#f5f5f5",
                "color": "#73818C",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Courses
        </Text>
      </View>
      <item>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.1-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Learn React Native
            </Text>
          </View>
        </View>
      </item>
    </section>
  </list>
</RCTSafeAreaView>
`;

exports[`updates when courses prop changes 2`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <list>
    <section>
      <View
        accessibilityTraits="header"
        style={
          Array [
            Object {
              "backgroundColor": "#f5f5f5",
              "flex": 1,
              "justifyContent": "center",
              "paddingLeft": 16,
              "paddingRight": 8,
              "paddingVertical": 4,
            },
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "#f5f5f5",
                "color": "#73818C",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Courses
        </Text>
      </View>
      <item>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.1-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Learn React Native
            </Text>
          </View>
        </View>
      </item>
    </section>
  </list>
</RCTSafeAreaView>
`;
